                     Mudança no setup_devices para sempre testar Paineis (Intermediário e Desenvase) caso não sejam bio_ready, independente do status da Biofábrica.
                     Pequenas melhorias no log do setup_devices.
                     Cria UndoStatus para salvar LastStatus no caso de falha durante pausa e recuperar quando do retorno do equipamento.
                     Permite ajuste de PH mesmo com a resistência/circulação já ligados.
                     Aborta wait volume se o mesmo atingir o valor maximo configurado
                     Fecha válvulas V1 e V2 antes de desligar o aerador para fazer leitura do PH
                     Na configuração de endereços, converte para maiúsculo os caracteres
            Network: Associa bf_default com base no endereço IP do client web. Desta forma permite multiplos usuários vendo diferentes biofábricas.
                     Testa as biofábricas que estão há mais de 5 minutos sem enviar atualização e muda o status para scp_outofdate. e remove IP
            Front..: No biorreator, abrindo as valvulas V2 e V3, o PH e Temperatura passam a ser exibidos em qualquer status que esteja

1.2.26  -   Master.: Process_Conn não permite ações durante Critical da Biofabrica
20231004             Implementação função de restaurar cultivo
                     set_valv mudar o valor independente do retorno do Orch. Aparentemente erros esporádicos estavam gerando falsos status das válvulas
            Back...: Implementação endpoint de restaurar cultivo
            Front..: Implementação botão de restaurar cultivo
            Orch...: Timeout voltou a ser 2000ms. Instabilidade de alguns equipamentos deve ter sido em função da redução que houve para 1500
            Agent..: BFID passa a ser automático e randômico. Cria e chama Master para atualização.

1.2.27  -   Master.: Corrige processo de atualização do software.
20231009             Caso não haja UndoStatus, atribui bio_ready.